# watnu

./: .gitignore  .sourcery.yaml  CODE watnu.ipynb  CONTRIBUTING.md  META.stay  README.md  TEST watnu.ipynb  build.py  config.json  conftest.py  filter_history.stay  index.md  pyproject.toml  pytest.ini  qt2py.py  requirements.txt  setup.cfg  setup.py  skills.py  tips.json  tips.py  watnu.py
.box/: CODE watnu.ipynb
.github/: FUNDING.yml
docs/: privacy.md
src/: .test0.py  .test0.py.2670c24dc321d71397f4ecf5513724c1.tmp  .test1.py  .test2.py  .test3.py  __init__.py  algo.py  app.py  attributions.html  build.py  classes.py  classes.py.a6ca1de407a33168f3848202af395034.tmp  config-experimental.json  config-experimental.stay  config-testing.stay  config.json  config.py  configuration.py  first_start.py  functions.py  helpers.py  icons_rc.py  logic.py  logic.py.54d7d77d905ee1d7fa4565c239feeea8.tmp  main.py  main.py.5f03a552cd7eb04b5ffcd81b08ef38ce.tmp  main_experimental.py  mantras.stay  q.py  qasync_test.py  qt2py.py  schema.sql  security.py  sql_stuff.py  startup.py  startup_checks.py  stuff.py  telegram.py  testing.py  tip_of_the_day.py  (+4 more)
src/extra/: attributions.html
src/lib/: directives.py  fluxx.py  utils.py
src/logs/: 00898998.txt  01105745.txt  01285692.txt  01294829.txt  02232050.txt  03637824.txt  04595904.txt  05908591.txt  06391555.txt  06573235.txt  07652222.txt  07661691.txt  07958377.txt  (+105 more)
test/: SQL.ipynb
tests/: SQL.ipynb  test_classes.py  test_driven.py  test_functionality.py  test_task_editor.py  test_tdd.py  test_units.py  test_ux_task_editor.py
(+170 files in other folders)
