[metadata]
name = watnu
version = attr: src.main.__version__
author = Anselm Kiefner
author_email = watnu@anselm.kiefner.de
description =  The Personal Task Scheduler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amogorkon/watnu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
exclude =
    src/ui/__pycache__
    src/ux/__pycache__
    src/.ipynb_checkpoints
    .github
    crosshair/examples
python_requires = >=3.12
install_requires =
    numpy
    requests
    PyQt6

[options.extras_require]
dev =
    pytest
    ruff

[options.packages.find]
where = src
